# nvstd

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  alloc.h  atomic.h  attributes.h  bit.h  chrclass.h  containers.c  core.c  errorcodes.h  errqueue.h  file.c  file.h  format.h  hash.h  image.h  print.c  print.h  props.h  rand.h  regex.h  rover.h  semver.h  stackalloc.h  stdafx.h  strconv.c  strconv.h  string.c  string.h  sysalloc.h  timer.h  types.h
containers/: atlas.h  bitset.h  hashmap.h  list.h  rbmap.h  rectpack.h
include/: alloc.h  assert.h  atomic.h  attributes.h  bit.h  chrclass.h  error.h  errorcodes.h  file.h  hash.h  log.h  print.h  props.h  rand.h  semver.h  settings.h  stdafx.h  strconv.h  stream.h  string.h  timer.h  types.h
include/containers/: bitset.h  hashmap.h  idlist.h  list.h  rbmap.h  rectpack.h
include/math/: mat.h  math.h  vec2.h  vec3.h  vec4.h
include/settings/: lex.h
math/: mat.h  math.h  vec2.h  vec3.h  vec4.h
src/: core.c  file.c  print.c  rand.c  settings.c  settings.lang.c  strconv.c  stream.c  string.c  strlen.s
src/containers/: bitset.c  hashmap.c  idlist.c  list.c  rbmap.c  rectpack.c
src/settings/: lex.c
